ajax demo added

--- a/templates/list.html
+++ b/templates/list.html
@@ -1,32 +1,26 @@
-<!doctype html>
-<html>
-   <body>
+{% extends 'base.html' %}
 
-    <a href="/">HOME</a>
-    <a href="/addstudent">Add New Student</a>
-    <a href="/list">List Student</a>
-    <br><hr>
-
-    {{ msg }}
-
-      <table border = 1>
-         <thead>
-            <td>Name</td>
-            <td>Address></td>
-            <td>city</td>
-            <td>Pincode</td>
-         </thead>
-         
-         {% for row in students %}
-            <tr>
-               <td>{{row["name"]}}</td>
-               <td>{{row["addr"]}}</td>
-               <td> {{ row["city"]}}</td>
-               <td>{{row['pin']}}</td>	
-            </tr>
-         {% endfor %}
-      </table>
-     
-
-   </body>
-</html>
+{% block content %}
+   <h2>Student List</h2>
+   <table class="table table-striped table-hover table-bordered">
+      <thead>
+         <tr>
+            <th>S.No</th>
+            <th>Name</th>
+            <th>Address</th>
+            <th>City</th>
+            <th>Pincode</th>
+         </tr>
+      </thead>
+      
+      {% for row in students %}
+         <tr>
+            <td>{{loop.index}}</td>
+            <td>{{row["name"]}}</td>
+            <td>{{row["addr"]}}</td>
+            <td>{{row["city"]}}</td>
+            <td>{{row['pin']}}</td>	
+         </tr>
+      {% endfor %}
+   </table>
+{% endblock %}
