--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
-<h1>Welcome to Student DB APP</h1>
-<a href="/">HOME</a>
-<a href="/addstudent">Add New Student</a>
-<a href="/list">List Student</a>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h2>Welcome to Student DB APP</h2>
+{% endblock %}
