--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,5 @@
-<!doctype html>
-<html>
-   <body>
-      {{ msg }}
-      <h2><a href = "\">Back to home page</a></h2>
-   </body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h2><a href = "\">Back to home page</a></h2>
+{% endblock %}
